# blux-quantum

./: .gitignore  .pre-commit-hooks.yaml  .ruff.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL  Makefile  NOTICE  README.md  ROLE.md  mkdocs.yml  mypy.ini  pyproject.toml  snapshot.md
.github/workflows/: ci.yml  docs.yml  release.yml  security-fsp.yml
blux_quantum/: __init__.py  audit.py  cli.py  config.py  diagnostics.py  dispatch.py  envelope.py  environment.py  orchestrator.py  reg_bridge.py  stability.py  telemetry.py  tui.py
blux_quantum/plugins/: __init__.py  loader.py
blux_quantum/plugins/examples/: doctrine_plugin.py  guard_plugin.py  lite_plugin.py
blux_quantum/plugins/quantum_framework/: __init__.py  loader.py
bq/: __init__.py  cli.py
bq_fsp/: README.md  __init__.py  cli.py  ignore.py  pyproject.toml  rules.py  sarif.py  scanner.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  INSTALL.md  INTEGRATIONS.md  OPERATIONS.md  PHYSICS.md  ROADMAP.md  ROLE.md  SECURITY.md  TROUBLESHOOTING.md  fsp.md  index.md
scripts/: bluxq  bq  demo_install_alias.ps1  gen_filetree.py  generate_command_reference.py  physics_check.sh  physics_checks.py  physics_tests.sh  update_readme_filetree.py
tests/: conftest.py  test_cli.py  test_physics.py  test_plugins.py  test_reference_generator.py  test_role_contract.py  test_telemetry.py
